[tool.poetry]
name = "rehost-cover"
version = "0.5"
description = ""
authors = ["spinfast319 <105055375+spinfast319@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = {extras = ["socks"], version = "^2.30.0"}
ratelimit = "^2.2.1"
mysql-connector-python = "^8.0.33"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py310']
include = '\.pyi?$'